change sample to lrg targets

--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -26,11 +26,11 @@ With this normalization, $\tilde{C}_{x_{i}, \ell}$ estimates the contribution of
 \begin{equation}\label{eq:cx_chi2}
 \chi^{2} = \tilde{C}^{T}_{X, \ell} \mathbb{C}_{X}^{-1} \tilde{C}_{X, \ell},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks \mr{with $\fnl=0$}. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the LRG sample with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, which results in a total of 81 bins, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
+where the covariance matrix $\mathbb{C}_{X} = < \tilde{C}_{X, \ell} \tilde{C}_{X, \ell'} >$ is constructed from the lognormal mocks \mr{with $\fnl=0$}. These $\chi^{2}$ values are measured for every clean mock realization with the \textit{leave-one-out} technique and compared to the values observed in the DESI LRG targets with various imaging systematic corrections. Specifically, we use 999 realizations to estimate a covariance matrix and then apply the covariance matrix from the 999 realizations to measure the $\chi^{2}$ for the one remaining realization. This process is repeated for all 1000 realizations to construct a histogram for $\chi^{2}$. We only include the bandpower bins from $\ell=2$ to $20$ with $\Delta\ell=2$, which results in a total of 81 bins, and test for the robustness with higher $\ell$ modes in Appendix \ref{sec:scalesys}. 
 
-Figure \ref{fig:clxmock} shows $\tilde{C}_{X,\ell}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the LRG sample has the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There are less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the sample with the linear model using two maps (extinction and depth in z) as identified from the Pearson correlation. Linear two maps is the most conservative systematic treatment method in terms of both the model flexibility and the number of input maps. With linear two maps (red dashed curve), most of the cross correlation signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross correlations against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. 
+Figure \ref{fig:clxmock} shows $\tilde{C}_{X,\ell}$ from the DESI LRG targets before and after applying various corrections for imaging systematics. The dark and light shades show the 97.5$^{\rm th}$ percentile from the $\fnl=0$ and $76.9$ mocks, respectively. Without imaging weights, the DESI LRG targets have the highest cross-correlations against extinction, stellar density, and depth in z (solid black curve). There are less significant correlations against depth in the g and r bands, and psfsize in the z band, which could be driven because of the inner correlations between the imaging systematic maps. First, we consider cleaning the DESI LRG targets with the linear model using two maps (extinction and depth in z) as identified from the Pearson correlation. Linear two maps is the most conservative systematic treatment method in terms of both the model flexibility and the number of input maps. With linear two maps (red dashed curve), most of the cross correlation signals are reduced below statistical uncertainties, especially against extinction, stellar density, and depth. However, the cross correlations against psfsize in r and z increases slightly on $6<\ell<20$ and $6<\ell<14$, respectively. 
 
-Regression against extinction and depth in the z-band helps mitigate large-scale cross correlations ($\ell < 6$), but there are some residual power on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (blue dot-dashed curve) approach alleviates the cross correlation against psfsize in r, and it yields similar results to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps using the linear approach. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects. Compared with the linear three maps method, we find that non-linear three maps (green dashed curve) can reduce the cross correlations against both the r and z-band psfsize maps, which shows the benefit of using a non-linear approach. To further examine the robustness of our cleaning methods, we also show the cross correlations after cleaning the LRG sample with linear eight maps (orange dotted curve) and non-linear four maps (pink dot-dashed curve). 
+Regression against extinction and depth in the z-band helps mitigate large-scale cross correlations ($\ell < 6$), but there are some residual power on smaller scales ($\ell > 6$) which cannot be mitigated with our set of two maps. The linear three maps (blue dot-dashed curve) approach alleviates the cross correlation against psfsize in r, and it yields similar results to those obtained from \textit{linear eight maps}, which indicates no further information can be extracted from eight maps using the linear approach. Therefore, we identify extinction, depth in z, and psfsize in r (\textit{three maps}) as the primary sources of systematic effects in the DESI LRG targets. Then, we adapt \textit{neural network three maps} to model non-linear systematic effects. Compared with the linear three maps method, we find that non-linear three maps (green dashed curve) can reduce the cross correlations against both the r and z-band psfsize maps, which shows the benefit of using a non-linear approach. To further examine the robustness of our cleaning methods, we also show the cross correlations after cleaning the DESI LRG targets with linear eight maps (orange dotted curve) and non-linear four maps (pink dot-dashed curve). 
 
 \subsection{Mean density contrast}
 
@@ -46,7 +46,7 @@ and the total residual error as,
 \begin{equation}
 \chi^{2} = \delta_{X}^{T} \mathbb{C_{\delta}}^{-1} \delta_{X},
 \end{equation}
-where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks \mr{with $\fnl=0$ that have had no mitigation applied to them}. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (red dashed curve), which is indicative of the psfsize-related systematics in our sample. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
+where the covariance matrix $\mathbb{C}_{\delta} = < \delta_{X} \delta_{X}>$ is constructed from the lognormal mocks \mr{with $\fnl=0$ that have had no mitigation applied to them}. Figure \ref{fig:nbarmock} shows the mean density contrast against the imaging properties for the DESI LRG targets. The dark and light shades represent the $1\sigma$ level fluctuations observed in 1000 lognormal density fields respectively with $\fnl=0$ and $76.9$. The DESI LRG targets before treatment (solid curve) exhibits a strong trend around $10\%$ against the z-band depth which is consistent with the cross power spectrum. Additionally, there are significant spurious trends against extinction and stellar density at about $5-6\%$. The linear approach is able to mitigate most of the systematic fluctuations with only extinction and depth in the z-band as input; however, a new trend appears against the r-band psfsize map with the \textit{linear two maps} approach (red dashed curve), which is indicative of the psfsize-related systematics in the DESI LRG targets. This finding is in agreement with the cross power spectrum. We re-train the linear model with three maps, but we still observe around $2\%$ residual spurious fluctuations in the low end of depth$_{z}$ and around $1\%$ in the high end of psfsize$_{z}$, which implies the presence of non-linear systematic effects. We find that the imaging weights from the non-linear model trained with the three identified maps (or four maps including the stellar density) are capable of reducing the fluctuations below $2\%$. Even with the non-linear three maps, we have about $1\%$ remaining systematic fluctuations against the z-band psfsize. We use the $\chi^{2}$ statistics to assess how significant these fluctuations are in comparison to the clean mocks. 
 
 \begin{figure}
 \raggedright
@@ -77,17 +77,17 @@ Figure \ref{fig:chi2test} presents $\chi^{2}$ histograms for the normalized cros
   \end{tabular}
 \end{table}
 
-The tests conducted here demonstrate the effectiveness of various cleaning approaches for the LRG sample without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues. \mr{When we compare the mean density $\chi^{2}$ from the DR9 sample to the mocks that have had the same imaging mitigation applied, we find that both nonlinear three and four maps have not entered the regime of over-correction. Whereas, nonlinear nine maps has reached the level of over-correction. This is illustrated in Figure \ref{fig:chi2scatter}.}
+The tests conducted here demonstrate the effectiveness of various cleaning approaches for the DESI LRG targets without revealing the measured power spectrum or $\fnl$ constraints. Results summarized in Table \ref{tab:chi2test} show that cleaning with non-linear three maps consistently produces $\chi^{2}$ values similar to clean mocks with reasonable $p$-values ($=0.39$ for mean density and $=0.59$ for cross power spectrum). On the other hand, the linear three maps approach fails to sufficiently mitigate systematics, as evidenced by low $p$-values ($< 0.001$ for mean density and $=0.04$ for cross power spectrum). Considering $p=0.05$ as a threshold for clean maps, the non-linear three maps approach is optimal, as adding more imaging systematic maps may exacerbate over-correction issues. \mr{When we compare the mean density $\chi^{2}$ from the DESI LRG targets to the mocks that have had the same imaging mitigation applied, we find that both nonlinear three and four maps have not entered the regime of over-correction. Whereas, nonlinear nine maps has reached the level of over-correction. This is illustrated in Figure \ref{fig:chi2scatter}.}
 
 \begin{figure}
-\includegraphics[width=0.45\textwidth]{chi2_scatter.pdf}
-\caption{\mr{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The faded squares represent the values observed in the $\fnl=76.9$ mocks after nonlinear three maps. The values observed in the DR9 LRG sample after the same treatments are shown with solid lines.}}\label{fig:chi2scatter}
+\includegraphics[width=0.5\textwidth]{chi2_scatter.pdf}
+\caption{\mr{The remaining systematic error $\chi^{2}$ from the mean galaxy density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three (orange), four (purple), and nine maps (pink) cleaning methods. The faded orange squares represent the values observed in the $\fnl=76.9$ mocks after nonlinear three maps. The values observed in the DESI LRG targets after the same treatments are shown with solid lines.}}\label{fig:chi2scatter}
 \end{figure}
 
 
-\mr{Figure \ref{fig:chi2scatter} illustrates the remaining systematic error $\chi^{2}$ from the mean density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The values for the $\fnl=76.9$ mocks are shown for nonlinear three maps only. The values observed in the DR9 LRG sample after the same treatments are shown with solid lines. Note that the covariance matrices for the mean density and cross power spectrum are based on the $\fnl=0$ mocks. As a result, we find that the $\chi^{2}$ values for the $\fnl=76.9$ mocks are significantly larger than that of the $\fnl=0$ realizations. Therefore, these $\chi^{2}$ tests will have a preference for correction until excess power is removed, or equivalently, $\fnl=0$ is recovered even if the underlying $\fnl$ of the Universe is non-zero. We also find that the differences are resilient against log transformation, and we cannot make the methods less sensitive to the $\fnl$ used in the mocks.} 
+\mr{Figure \ref{fig:chi2scatter} illustrates the remaining systematic error $\chi^{2}$ from the mean density contrast for mocks with $\fnl=0$ before (shown on horizontal scale) and after mitigation (shown on vertical scale) using the nonlinear three, four, and nine maps cleaning methods. The values for the $\fnl=76.9$ mocks are shown for nonlinear three maps only. The values observed in the DESI LRG targets after the same treatments are shown with solid lines. Note that the covariance matrices for the mean density and cross power spectrum are based on the $\fnl=0$ mocks. As a result, we find that the $\chi^{2}$ values for the $\fnl=76.9$ mocks are significantly larger than that of the $\fnl=0$ realizations. Therefore, these $\chi^{2}$ tests will have a preference for correction until excess power is removed, or equivalently, $\fnl=0$ is recovered even if the underlying $\fnl$ of the Universe is non-zero. We also find that the differences are resilient against log transformation, and we cannot make the methods less sensitive to the $\fnl$ used in the mocks.} 
 
-\mr{As shown in Figure \ref{fig:contmcmc}, we are able to recover the true $\fnl$ using the coefficients derived in Table \ref{ssec:calibration}. The associated cost is that statistical precision will be diminished due to the large-scale clustering information being removed by mitigating with more maps than necessary. Our work motivates better diagnostics for the characterization of systematics, such as one robustly differentiates large-scale excess power due to imaging systematics from that of non-zero local PNG.}
+\mr{As shown in Figure \ref{fig:contmcmc}, we are able to recover the true $\fnl$ using the coefficients derived in Table \ref{ssec:calibration}. The associated drawback is that statistical precision will be diminished due to the large-scale clustering information being removed by mitigating with more maps than necessary. Our work motivates better diagnostics for the characterization of systematics, such as one robustly differentiates large-scale excess power due to imaging systematics from that of non-zero local PNG.}
 
 
 
@@ -102,52 +102,78 @@ M_{\ell \ell^{\prime}} = \frac{2\ell^{\prime}+1}{4\pi} \sum_{\ell^{\prime\prime}
 0 & 0 & 0
 \end{pmatrix},
 \end{equation}
-\mr{where the last term in the right hand side represents the Wigner 3-j symbol (or Clebsch-Gordan coefficient). We use \textsc{SymPy} \citep{sympy2017} to calculate the Wigner symbols. We benchmark our code against the publicly available software, \textsc{NaMaster}\footnote{\href{https://github.com/LSSTDESC/NaMaster}{https://github.com/LSSTDESC/NaMaster}} \citep{2019MNRAS.484.4127A}. Figure \ref{fig:window_conv} illustrates the different approaches to account for the mode-mode coupling caused by the survey window for two arbitrary values of $\fnl$. The survey mask applied is for the DESI footprint.The red shade represents the 68\% dispersion of the $\fnl=76.9$ mocks.}
+\mr{where the last term in the right hand side represents the Wigner 3-j symbol (or Clebsch-Gordan coefficient), and is calculated using \textsc{SymPy} \citep{sympy2017}. We benchmark our code against the publicly available software, \textsc{NaMaster}\footnote{\href{https://github.com/LSSTDESC/NaMaster}{https://github.com/LSSTDESC/NaMaster}} \citep{2019MNRAS.484.4127A}. Figure \ref{fig:window_conv} illustrates the different approaches to account for the mode-mode coupling caused by the survey window for two arbitrary values of $\fnl$. The survey mask applied is for the DESI footprint.The red shade represents the 68\% dispersion of the $\fnl=76.9$ mocks.}
 
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.45\textwidth]{figures/cl_conv.pdf}
-    \caption{\mr{The model power spectrum before and after the survey geometry convolution for $\fnl=0$ and $76.9$. The bottom panel shows the residual error with respect to the \textsc{NaMaster} code. The shade represents the dispersion of the $\fnl=76.9$ mock.}}
+    \includegraphics[width=0.5\textwidth]{figures/cl_conv.pdf}
+    \caption{\mr{The model power spectrum before and after the survey geometry convolution for $\fnl=0$ and $76.9$ using the DESI survey mask. The bottom panel shows the residual error with respect to the \textsc{NaMaster} code. The shade represents the dispersion of the $\fnl=76.9$ mock.}}
     \label{fig:window_conv}
 \end{figure}
 
 \subsection{Scale dependent systematics}\label{sec:scalesys}
-Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the $\chi^{2}$ values for our sample cleaned respectively with the linear and neural network approaches, both with three maps. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence.
+Our fiducial cross power spectrum diagnostic (equation \ref{eq:cx_chi2}) uses harmonic modes up to $\ell=20$, which determines the smallest scale used for characterizing residual systematic errors. To investigate the statistical significance of the cross power spectrum's $\chi^{2}$, we examine its dependence on the largest harmonic mode $\ell_{\rm max}$. We extend $\ell_{\rm max}$ from $20$ to $100$, where the latter scale corresponds to density fluctuations on scales smaller than $2$ degrees. Figure \ref{fig:chi2cellextend} shows the median of the cross power spectrum's $\chi^{2}$ from the clean $\fnl=0$ mocks as the highest mode $\ell_{\rm max}$ increases from $20$ to $100$ (represented by the solid line). The red circles and blue crosses show the $\chi^{2}$ values for the DESI LRG targets cleaned respectively with the linear and neural network approaches, both with three maps. Overall, we find that for all scales up to $\ell=100$, the nonlinear three maps approach yields consistent values with the clean mocks, whereas the linear three maps approach exhibits significant remaining systematics at more than 95\% confidence.
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{chi2lmax.pdf}
-\caption{The cross power spectrum's $\chi^{2}$ between the LRG density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and non-linear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
+\includegraphics[width=0.5\textwidth]{chi2lmax.pdf}
+\caption{The cross power spectrum's $\chi^{2}$ between the DESI LRG target density and imaging systematic maps as a function of the highest mode $\ell_{\rm max}$ when the sample is cleaned with the linear (triangles) and non-linear (squares) three maps. The lowest mode is fixed at $\ell_{\rm min}=2$. The solid curve and dark (light) shade represent the median value and $68\%$ ($95\%$) confidence regions, estimated from the $\fnl=0$ mocks.}\label{fig:chi2cellextend}
 \end{figure}
 
 
 \subsection{Redshift uncertainties}\label{ssec:nzuncer}
-We use the Early Data Assembly Version 1 (EDA V1) to construct the redshift distribution for the DESI LRG targets. We find that the change in the maximum likelihood estimate of $\fnl$ is negligible, \mr{$|\Delta \fnl | < 1$, compared to the statistical precision of our measurements}. Figure \ref{fig:cl_nz} shows the measured power spectrum of the DESI targets and the corresponding best fit theory curves. The variations in $dN/dz$ do not significicantly alter the conclusion of our paper.
+
 \begin{figure}
 \raggedleft
-\includegraphics[width=0.43\textwidth]{figures/nz_lrg_eda.pdf}
-\includegraphics[width=0.45\textwidth]{figures/cl_nz.pdf}\caption{Top: Redshift distribution of the DESI LRG targets from the EDA V1 and Denali. Bottom: The measured power spectrum of the DESI DR9 LRG sample and the best fit theory models using different redshift distributions.}\label{fig:cl_nz}
+\includegraphics[width=0.46\textwidth]{figures/nz_lrg_eda.pdf}
+\includegraphics[width=0.48\textwidth]{figures/cl_nz.pdf}\caption{Top: The redshift distribution of the DESI LRG targets from the EDA V1 and Denali. Bottom: The measured power spectrum of the DESI LRG targets and the best fit theory models using different redshift distributions.}\label{fig:cl_nz}
 \end{figure}
 
-
-
+We use the Early Data Assembly Version 1 (EDA V1) to construct the redshift distribution for the DESI LRG targets. We find that the change in the maximum likelihood estimate of $\fnl$ is negligible, \mr{$|\Delta \fnl | < 1$, compared to the statistical precision of our measurements}. Figure \ref{fig:cl_nz} shows the measured power spectrum of the DESI targets and the corresponding best fit theory curves. The variations in $dN/dz$ do not significicantly alter the conclusion of our paper.
 
 \subsection{Spurious bump in NGC}\label{ssec:ndecalsbump}
-As shown in Figure \ref{fig:mcmc_dr9elmin} (top panel), we realize that the spurious feature at $\ell \sim 10-20$ is removed in the DECaLS South region after mitigation, but it remains in the BASS+MzLS and DECaLS North. We use the neural networks trained on the DECaLS South with three and nine maps to mitigate the galaxy density in the DECaLS North region, and then measure the power spectrum. Figure \ref{fig:clSonN} shows the power spectrum before treatment (No Weight) and after the nonlinear three maps and nine maps methods for comparison. We find that whatever causing the bump is different between the DECaLS North and South. The best-fit estimates for $\fnl$ from the DR9 DECaLS North using the neural network correction with three maps (NN trained on DECaLS North), three maps (NN trained on DECaLS South), and nine maps (NN trained on DECaLS South) are $41$, \mr{$36$}, and \mr{$75$}, respectively. \mr{The solution without correction (No weight) results in a best fitting estimate of $\fnl=94$.}
 
 \begin{figure}
     \centering
-    \includegraphics[width=0.45\textwidth]{figures/cl_SonN.pdf}
+    \includegraphics[width=0.48\textwidth]{figures/cl_SonN.pdf}
     \caption{The unbinned measured power spectrum of the DESI LRG targets in the DECaLS North region before and after various mitigations using the neural network approach.}
     \label{fig:clSonN}
 \end{figure}
 
+As shown in Figure \ref{fig:mcmc_dr9elmin} (top panel), we realize that the spurious feature at $\ell \sim 10-20$ is removed in the DECaLS South region after mitigation, but it remains in the BASS+MzLS and DECaLS North. We use the neural networks trained on the DECaLS South with three and nine maps to mitigate the galaxy density in the DECaLS North region, and then measure the power spectrum. Figure \ref{fig:clSonN} shows the power spectrum before treatment (No Weight) and after the nonlinear three maps and nine maps methods for comparison. We find that whatever causing the bump is different between the DECaLS North and South. The best-fit estimates for $\fnl$ from the DR9 DECaLS North using the neural network correction with three maps (NN trained on DECaLS North), three maps (NN trained on DECaLS South), and nine maps (NN trained on DECaLS South) are $41$, \mr{$36$}, and \mr{$75$}, respectively. \mr{The solution without correction (No weight) results in a best fitting estimate of $\fnl=94$.}
+
 
 \section{Lognormal mocks}
+
 We fit the mean power spectrum of the lognormal mocks to validate the modeling pipeline, and in particular the survey geometry and integral constraint treatments. We investigate the impact of covariance matrix on the inference of $\fnl$. Finally, we show the impact of imaging systematic mitigation and the over-subtraction effect when the cleaning methods are applied to the mocks. 
 
 \subsection{Clean mocks}
+The $68\%$ and $95\%$ probability contours on the PNG parameter $\fnl$ and bias coefficient $b$ are shown in Figure \ref{fig:mcmc_mocks0} and \ref{fig:mcmc_mocks100}, respectively, for the $\fnl=0$ and 76.9 mocks. The best-fitting, marginalized mean estimates, as well as the $1\sigma$ and $2\sigma$ confidence intervals of $\fnl$ are summarized in Table \ref{tab:mocksmcmc}. 
+
+Measuring the power spectrum from the entire DESI footprint reduces the cosmic variance and thus improves the constraining power. Figure \ref{fig:mcmc_mocks0} compares the constraints from fitting the log of the mean power spectrum of the mocks when it is measured from the DESI footprint to those obtained from the sub imaging surveys. We find that the underlying true $\fnl$ value is recovered within $95\%$ confidence, and that the contours for the DESI region are smaller by a factor of two. 
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.48\textwidth]{figures/mcmc_zero.pdf} 
+    \caption{68\% and 95\% confidence contours from the mean power spectrum of the $\fnl=0$ mocks for the DESI footprint and sub-imaging surveys. The truth values are represented by vertical and horizontal lines.}\label{fig:mcmc_mocks0}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.48\textwidth]{figures/mcmc_po100.pdf} 
+    \caption{68\% and 95\% confidence contours of fitting the mean power spectrum or its log transformation from the $\fnl=76.9$ mocks for the DESI footprint. Using the $\log C_{\ell}$ fitting yield constraints that are insensitive to the covariance used. The truth values are represented by vertical and horizontal lines.}\label{fig:mcmc_mocks100}
+\end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
+    \includegraphics[width=0.45\textwidth]{figures/bestfit_po100.pdf}         
+    \caption{The best-fitting estimates of $b$ and $\fnl$ from fitting 1000 lognormal mocks with $\fnl=0$ (top) and $76.9$ (bottom) in the DESI footprint. No mitigation is applied to the mocks. The truth values are represented by vertical and horizontal lines.}\label{fig:bestfit_mocks}
+\end{figure}
+
+The power spectrum of the mocks at low $\ell$ is very sensitive to the cosmic variance and the true value of $\fnl$. Consequently, a large value of $\fnl$ can induce very large power on low $\ell$, and thus significantly change the covariance matrix. We find that applying the log transformation on the power spectrum makes the result more robust against the choice of the covariance matrix. Figure \ref{fig:mcmc_mocks100} shows the confidence contours when we fit either the power spectrum or its log transform of the $\fnl=76.9$ mocks, and use different covariance matrices. We consider the $\fnl=0$ and $76.9$ mocks to construct the covariance from one set and use it to fit the mean power spectrum of the other set. When the covariance matrix is constructed from the same set of mocks used for the mean power spectrum, we find that the difference in $\fnl$ constraints between fitting the power spectrum and its log transformation is negligible at only 2\%. If we use the $\fnl=0$ mocks to estimate the covariance, and fit the log power spectrum of the $\fnl=76.9$ mocks, we find that the error on $\fnl$ increases only by $7\%$. However, when the mean power spectrum of the $\fnl=76.9$ mocks is fit using the covariance matrix estimated from the $\fnl=0$ mocks, the constraints tighten by a factor of $5$ due to a higher signal to noise ratio. Therefore, we argue that fitting the log power spectrum can help mitigate the need for having $\fnl$-dependent covariance matrices and make the constraints less sensitive to covariance construction.
+
 
 \begin{table*}
     \caption{The best-fitting and marginalized mean estimates for $\fnl$ from fitting the mean power spectrum of the mocks. \mr{The covariance is scaled to represent the error on the mean power spectrum.} The number of degrees of freedom is 34 (37 data points - 3 parameters).}   
@@ -174,35 +200,12 @@ Clean $0$ & DECaLS South &  log$C_{\ell}$& $  0.67$& $  0.67$& $  0.13<\fnl<  1.
     }
 \end{table*}
 
-\begin{figure}
-    \centering
-    \includegraphics[width=0.45\textwidth]{figures/mcmc_zero.pdf} 
-    \caption{68\% and 95\% confidence contours from the mean power spectrum of the $\fnl=0$ mocks for the DESI footprint and sub-imaging surveys. The truth values are represented by vertical and horizontal lines.}\label{fig:mcmc_mocks0}
-\end{figure}
-
-\begin{figure}
-    \centering
-    \includegraphics[width=0.45\textwidth]{figures/mcmc_po100.pdf} 
-    \caption{68\% and 95\% confidence contours of fitting the mean power spectrum or its log transformation from the $\fnl=76.9$ mocks for the DESI footprint. Using the $\log C_{\ell}$ fitting yield constraints that are insensitive to the covariance used. The truth values are represented by vertical and horizontal lines.}\label{fig:mcmc_mocks100}
-\end{figure}
-
-\begin{figure}
-    \centering    \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
-    \includegraphics[width=0.45\textwidth]{figures/bestfit_po100.pdf}         
-    \caption{best-fitting estimates from fitting 1000 lognormal mocks with $\fnl=0$ (top) and $76.9$ (bottom) in the DESI footprint. The truth values are represented by vertical and horizontal lines. The truth values are represented by vertical and horizontal lines.}\label{fig:bestfit_mocks}
-\end{figure}
-
-The $68\%$ and $95\%$ probability contours on the PNG parameter $\fnl$ and bias coefficient $b$ are shown in Figure \ref{fig:mcmc_mocks0} and \ref{fig:mcmc_mocks100}, respectively, for the $\fnl=0$ and 76.9 mocks. The best-fitting, marginalized mean estimates, as well as the $1\sigma$ and $2\sigma$ confidence intervals of $\fnl$ are summarized in Table \ref{tab:mocksmcmc}. 
-
-Measuring the power spectrum from the entire DESI footprint reduces the cosmic variance and thus improves the constraining power. Figure \ref{fig:mcmc_mocks0} compares the constraints from fitting the log of the mean power spectrum of the mocks when it is measured from the DESI footprint to those obtained from the sub imaging surveys. We find that the underlying true $\fnl$ value is recovered within $95\%$ confidence, and that the contours for the DESI region are smaller by a factor of two. 
-
-The power spectrum of the mocks at low $\ell$ is very sensitive to the cosmic variance and the true value of $\fnl$. Consequently, a large value of $\fnl$ can induce very large power on low $\ell$, and thus significantly change the covariance matrix. We find that applying the log transformation on the power spectrum makes the result more robust against the choice of the covariance matrix. Figure \ref{fig:mcmc_mocks100} shows the confidence contours when we fit either the power spectrum or its log transform of the $\fnl=76.9$ mocks, and use different covariance matrices. We consider the $\fnl=0$ and $76.9$ mocks to construct the covariance from one set and use it to fit the mean power spectrum of the other set. When the covariance matrix is constructed from the same set of mocks used for the mean power spectrum, we find that the difference in $\fnl$ constraints between fitting the power spectrum and its log transformation is negligible at only 2\%. If we use the $\fnl=0$ mocks to estimate the covariance, and fit the log power spectrum of the $\fnl=76.9$ mocks, we find that the error on $\fnl$ increases only by $7\%$. However, when the mean power spectrum of the $\fnl=76.9$ mocks is fit using the covariance matrix estimated from the $\fnl=0$ mocks, the constraints tighten by a factor of $5$ due to a higher signal to noise ratio. Therefore, we argue that fitting the log power spectrum can help mitigate the need for having $\fnl$-dependent covariance matrices and make the constraints less sensitive to covariance construction.
-
-Figure \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl$ for $\fnl=0$ and $=76.9$ mocks in the top and bottom panels, respectively. Truth values are represented via the dotted lines. The points are color-coded with the minimum $\chi^{2}$ from fit for each realization. The histograms of best-fitting $\fnl$ estimates are plotted in the background. For the $\fnl=0$ mocks, the best-fitting estimates are more symmetric. To understand this behaviour, we consider the first derivative of the likelihood (Equation \ref{eq:likelihood}), which is proportional to the first derivative of the log power spectrum. By simplifying the integrals involved in $C_{\ell}$, we have $C_{\ell} = A_{0, \ell} + A_{1,\ell} \fnl + A_{2, \ell} \fnl^{2}$ where $A_{123,\ell}$ are $\ell$-dependent terms. Then, the derivative of the likelihood is proportional to
+Figure \ref{fig:bestfit_mocks} shows the best-fitting estimates for $b$ vs $\fnl$ for $\fnl=0$ and $=76.9$ mocks in the top and bottom panels, respectively. Truth values are represented via the dotted lines. The points are color-coded with the minimum $\chi^{2}$ from fit for each realization. The histograms of the best-fitting $\fnl$ estimates are plotted in the background. For the $\fnl=0$ mocks, the best-fitting estimates are more symmetric. To understand this behaviour, we consider the first derivative of the likelihood (Equation \ref{eq:likelihood}), which is proportional to the first derivative of the log power spectrum. By simplifying the integrals involved in $C_{\ell}$, we have $C_{\ell} = A_{0, \ell} + A_{1,\ell} \fnl + A_{2, \ell} \fnl^{2}$ where $A_{123,\ell}$ are $\ell$-dependent terms. Then, the derivative of the likelihood is proportional to
 \begin{equation}
     \frac{d}{d\fnl}\log(C_{\ell}) = \frac{A_{1, \ell}+2A_{2, \ell}\fnl}{A_{0, \ell} + A_{1,\ell} \fnl + A_{2, \ell} \fnl^{2}}.
 \end{equation}
 For infinitesimal values of $\fnl$, the derivative becomes asymptotically independent from $\fnl$ while for large values of $\fnl$ it decreases as $2/\fnl$. This implies that for the $\fnl=0$ mocks, the likelihood is more likely to be skewed toward negative values.
+
 
 \subsection{Contaminated mocks}\label{ssec:contmocks}
 Our nonlinear neural network-based approach is applied to the $\fnl=0$ and $76.9$ mocks. We only consider the methods that include running the neural network with three, four, and nine imaging systematic maps. The measured mean power spectrum of the mocks are shown in Figure \ref{fig:clmocks} for $\fnl=0$ (left) and $76.9$ (right). The solid and dashed curves show the measurements respectively from the clean and contaminated mocks.
